	PR target/26504 	* config/avr/avr.h (FRAME_POINTER_CFA_OFFSET): Define.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116950 138bc75d-0d04-0410-961f-82ee72b054a4